A new version of Book Component is out. It requires PHP 8.1 and uses some of its new features.

For complete list of changes since previous version, see CHANGELOG.md.