@@ -1,3 +1,5 @@
 A new version of Book Component is out. It requires PHP 8.1 and uses some of its new features.
 
+Interface IBookPageCondition is deprecated, use new BookPageCondition instead. The former will be removed in next major version.
+
 For complete list of changes since previous version, see CHANGELOG.md.
